tests/semantic_errors/sasha31_3.tl
-- test case 31.
-- Description : Function semantics. Parameters have same names.

-- Expected : '3'
require "ifj21" 
 function                foo( a : string, a : string ) : nil
 end 

